refactor(eventhandling): remove builder pattern from `MetaDataSequencingPolicy` and update tests accordingly